--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -1,5 +1,15 @@
 .avatar {
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 22px;
+    height: 22px;
+}
+
+.sm {
+    width: 32px;
+    height: 32px;
+}
+
+.md {
+    width: 60px;
+    height: auto;
 }
