--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -5,11 +5,16 @@
 }
 
 .sm {
-    width: 32px;
-    height: 32px;
+    width: 36px;
+    height: 36px;
 }
 
 .md {
-    width: 60px;
-    height: auto;
+    width: 38px;
+    height: 38px;
+}
+
+.lm {
+    width: 56px;
+    height: 56px;
 }
