--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,18 +1,14 @@
 .nav-bar {
-    display: flex;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    justify-content: center;
     border-bottom: 1px solid rgb(211, 211, 211);
     
 }
 
 .nav-flow {
     display: flex;
-    justify-content: space-evenly;
-    width: 975px;
-    padding: 0px 16px;
     align-items: center;
+    justify-content: space-between;
 }
