--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,7 +4,8 @@
     left: 0;
     width: 100%;
     border-bottom: 1px solid rgb(211, 211, 211);
-    
+    background-color: white;
+    z-index: 1000;
 }
 
 .nav-flow {
