--- a/src/components/serach-input/Searchbar.css
+++ b/src/components/serach-input/Searchbar.css
@@ -1,10 +1,9 @@
 .search-bar {
     text-align: center;
     padding: 7px 0px;
-   
 }
 
-.search-bar input {
+.search {
      width: 190px;
      height: 23px;
 }
