--- a/src/components/avatar-names/Name.css
+++ b/src/components/avatar-names/Name.css
@@ -1,6 +1,11 @@
 .nameText {
     display: flex;
     flex-direction: column;
+    align-items: center;
     font-size: 14px;
     font-weight: 400;
+}
+
+.baseline {
+    align-items: baseline;
 }
